@@ -16,10 +16,11 @@ segment.length()
 segment.move(x, y)    # return new segment
 segment.move(point)    # return new segment
 point in segment      # return bool
-s1.intersect(s2)      # return bool
-s1.intersection_point(s2)      # return point or None
-s1.parallel(s2)      # return bool
-s1.perpendicular(s2)      # return bool
+s1 in s2   # return bool
+s1.intersect(s2)   # return bool
+s1.intersection_point(s2)   # return point or None
+s1.parallel(s2)   # return bool
+s1.perpendicular(s2)   # return bool
 segment.calculate_y(x)   # return y, Point(x, y) in segment
 segment.calculate_x(y)   # return x, Point(x, y) in segment
 segment.gnu()   # return gnuplot string
