@@ -1,5 +1,8 @@
 CHANGELOG
 
+2021-03-26
+* New tests: segment1 in segment2, segment in rectangle, segment in triangle.
+
 2021-03-11
 * Making simple planar maps: PlanarMap(segment), PlanarMap(triangle), 
 PlanarMap(rectangle), PlanarMap(polygon).
